--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE HTML>
-<!---->
+<!--Main Page-->
 <html>
 	<head>
 		<title>aignashkina.io</title>
@@ -15,7 +15,7 @@
 
 				<!-- Header -->
 					<header id="header" class="alt">
-						<h1><a href="index.html">Solid State</a></h1>
+						<h1><a href="index.html">aignashkina.io</a></h1>
 						<nav>
 							<a href="#menu">Menu</a>
 						</nav>
@@ -27,10 +27,9 @@
 							<h2>Menu</h2>
 							<ul class="links">
 								<li><a href="index.html">Home</a></li>
-								<li><a href="generic.html">Generic</a></li>
-								<li><a href="elements.html">Elements</a></li>
-								<li><a href="#">Log In</a></li>
-								<li><a href="#">Sign Up</a></li>
+								<li><a href="hiv_research.html">HIV Research</a></li>
+								<li><a href="certs.html">Certifications</a></li>
+								<li><a href = "references_from_ed.html">Recommendations</a></li>
 							</ul>
 							<a href="#" class="close">Close</a>
 						</div>
@@ -38,10 +37,21 @@
 
 				<!-- Banner -->
 					<section id="banner">
+						<style>
+							#banner {
+								background-image: url("images/lab1.jpeg");
+								background-size: cover;
+								background-position: center;
+								background-repeat: no-repeat;
+								color: white;
+								text-shadow: -1px -1px 0 black, 1px -1px 0 black, -1px 1px 0 black, 1px 1px 0 black;
+								letter-spacing: 1px; /* Adjust the letter spacing as needed */
+							}
+						</style>
 						<div class="inner">
-							<div class="logo"><span class="icon fa-gem"></span></div>
+							<div class="logo"><span class="fa fa-flask"></span></div>
 							<h2>Anastasia's Portfolio</h2>
-							<p>Hello, my name is Anastasia Ignashkina! I am a alumni of Florida International University, in bachelor of Science and Arts.</p>
+							<p>I'm Anastasia Ignashkina, a biology graduate from FIU, with a passion for research and a background in healthcare from my time at Nicklaus Children's Hospital. Ready to contribute to the field of biology and make meaningful discoveries.<br></p>
 						</div>
 					</section>
 
@@ -51,11 +61,11 @@
 						<!-- One -->
 							<section id="one" class="wrapper spotlight style1">
 								<div class="inner">
-									<a href="#" class="image"><img src="images/pic01.jpg" alt="" /></a>
+									<a href="hiv_research.html" class="image"><img src="images/red-liquid-laboratory-glass-logo-icon-illustration-design-vector.jpg" alt="" /></a>
 									<div class="content">
 										<h2 class="major">HIV Research</h2>
 										<p>This research is focused on treatment of HIV and it's complications.</p>
-										<a href="#" class="special">Learn more</a>
+										<a href="hiv_research.html" class="special">Learn more</a>
 									</div>
 								</div>
 							</section>
@@ -63,11 +73,11 @@
 						<!-- Two -->
 							<section id="two" class="wrapper alt spotlight style2">
 								<div class="inner">
-									<a href="#" class="image"><img src="images/pic02.jpg" alt="" /></a>
+									<a href="certs.html" class="image"><img src="images/cert2.jpg" alt="" /></a>
 									<div class="content">
-										<h2 class="major">KAI-12</h2>
-										<p>New element which is powerful to dissolve plastic and make it usable again.</p>
-										<a href="#" class="special">Learn more</a>
+										<h2 class="major">Certifications</h2>
+										<p>My professional certifications.</p>
+										<a href="certs.html" class="special">Learn more</a>
 									</div>
 								</div>
 							</section>
@@ -75,16 +85,16 @@
 						<!-- Three -->
 							<section id="three" class="wrapper spotlight style3">
 								<div class="inner">
-									<a href="#" class="image"><img src="images/pic03.jpg" alt="" /></a>
+									<a href="references_from_ed.html" class="image"><img src="images/recom3.png" alt="" /></a>
 									<div class="content">
-										<h2 class="major">Blood work</h2>
-										<p>Lorem ipsum dolor sit amet, etiam lorem adipiscing elit. Cras turpis ante, nullam sit amet turpis non, sollicitudin posuere urna. Mauris id tellus arcu. Nunc vehicula id nulla dignissim dapibus. Nullam ultrices, neque et faucibus viverra, ex nulla cursus.</p>
-										<a href="#" class="special">Learn more</a>
+										<h2 class="major">Recommendations & Honors</h2>
+										<p>References from educational institutions.</p>
+										<a href="references_from_ed.html" class="special">Learn more</a>
 									</div>
 								</div>
 							</section>
 
-						<!-- Four -->
+						<!-- 
 							<section id="four" class="wrapper alt style1">
 								<div class="inner">
 									<h2 class="major">Other researches</h2>
@@ -107,7 +117,7 @@
 							</section>
 
 					</section>
-
+				-->
 				<!-- Footer -->
 					<section id="footer">
 						<div class="inner">
@@ -115,10 +125,10 @@
 							<p>Below, you can get my professional accounts and download my resume.</p>
 							<!--Contact-->
 							<ul class="contact">
-								<li class="icon solid fa-user"><a href='#' download = '#'>Get My Resume</a></li>
+								<li class="icon solid fa-user"><a href='letters/Anastasia_Ignashkina_CV.pdf' download = 'Anastasia_Ignashkina_CV.pdf'>Get My Resume</a></li>
 								<li class="icon solid fa-phone">(239)-321-3194</li>
-								<li class="icon solid fa-envelope"><a href="#">information@untitled.tld</a></li>
-								<li class="icon brands fa-linkedin"><a href="#">twitter.com/untitled-tld</a></li>
+								<li class="icon solid fa-envelope"><a href="#">aigna002@fiu.edu</a></li>
+								<li class="icon brands fa-linkedin"><a href="https://www.linkedin.com/in/anastasia-ignashkina-5031951b7/">LinkedIn</a></li>
 							</ul>
 							<ul class="copyright">
 								<li>&copy; aignashkina.io </li><li>2023</li>
