--- a/certs.html
+++ b/certs.html
@@ -28,8 +28,11 @@
 						<ul class="links">
 							<li><a href="index.html">Home</a></li>
 							<li><a href="hiv_research.html">HIV Research</a></li>
+							<li><a href = "aqua_research.html">Bleaching Research</a></li>
+							<li><a href = "academic_work.html">Academic Materials</a></li>
 							<li><a href="certs.html">Certifications</a></li>
-							<li><a href = "references_from_ed.html">Recommendations</a></li>
+							<li><a href="references_from_ed.html">Recommendations</a></li>
+							<li><a href = "honors.html">My Awards & Honors</a></li>
 						</ul>
 						<a href="#" class="close">Close</a>
 					</div>
@@ -63,23 +66,26 @@
 
 					</section>
 
-				<!-- Footer -->
-				<section id="footer">
-					<div class="inner">
-						<h2 class="major">Get in touch</h2>
-						<p>Below, you can get my professional accounts and download my resume.</p>
-						<!--Contact-->
-						<ul class="contact">
-							<li class="icon solid fa-user"><a href='letters/Anastasia_Ignashkina_CV.pdf' download = 'Anastasia_Ignashkina_CV.pdf'>Get My Resume</a></li>
-							<li class="icon solid fa-phone">(239)-321-3194</li>
-							<li class="icon solid fa-envelope"><a href="#">aigna002@fiu.edu</a></li>
-							<li class="icon brands fa-linkedin"><a href="https://www.linkedin.com/in/anastasia-ignashkina-5031951b7/">LinkedIn</a></li>
-						</ul>
-						<ul class="copyright">
-							<li>&copy; aignashkina.io </li><li>2023</li>
-						</ul>
-					</div>
-				</section>
+			<!-- Footer -->
+			<section id="footer">
+				<div class="inner">
+					<h2 class="major">Get in touch</h2>
+					<p>Below, you can get my professional accounts and download my resume.</p>
+					<!--Contact-->
+					<ul class="contact">
+						<li class="icon solid fa-user"><a href='letters/Anastasia_Ignashkina_CV.pdf'
+								download='Anastasia_Ignashkina_CV.pdf'>Get My Resume</a></li>
+						<li class="icon solid fa-phone">(239)-321-3194</li>
+						<li class="icon solid fa-envelope"><a href="#"> aignashkina7@gmail.com</a></li>
+						<li class="icon brands fa-linkedin"><a
+								href="https://www.linkedin.com/in/anastasia-ignashkina-5031951b7/">LinkedIn</a></li>
+					</ul>
+					<ul class="copyright">
+						<li>&copy; aignashkina.io </li>
+						<li>2023</li>
+					</ul>
+				</div>
+			</section>
 
 		<!-- Scripts -->
 			<script src="assets/js/jquery.min.js"></script>
