--- a/index.html
+++ b/index.html
@@ -1,100 +1,150 @@
 <!DOCTYPE HTML>
 <!--Main Page-->
 <html>
-	<head>
-		<title>aignashkina.io</title>
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="assets/css/main.css" />
-		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
-	</head>
-	<body class="is-preload">
 
-		<!-- Page Wrapper -->
-			<div id="page-wrapper">
+<head>
+	<title>Home Page - Portfolio</title>
+	<meta charset="utf-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+	<link rel="stylesheet" href="assets/css/main.css" />
+	<noscript>
+		<link rel="stylesheet" href="assets/css/noscript.css" />
+	</noscript>
+</head>
 
-				<!-- Header -->
-					<header id="header" class="alt">
-						<h1><a href="index.html">aignashkina.io</a></h1>
-						<nav>
-							<a href="#menu">Menu</a>
-						</nav>
-					</header>
+<body class="is-preload">
 
-				<!-- Menu -->
-					<nav id="menu">
-						<div class="inner">
-							<h2>Menu</h2>
-							<ul class="links">
-								<li><a href="index.html">Home</a></li>
-								<li><a href="hiv_research.html">HIV Research</a></li>
-								<li><a href="certs.html">Certifications</a></li>
-								<li><a href = "references_from_ed.html">Recommendations</a></li>
-							</ul>
-							<a href="#" class="close">Close</a>
-						</div>
-					</nav>
+	<!-- Page Wrapper -->
+	<div id="page-wrapper">
 
-				<!-- Banner -->
-					<section id="banner">
-						<style>
-							#banner {
-								background-image: url("images/lab1.jpeg");
-								background-size: cover;
-								background-position: center;
-								background-repeat: no-repeat;
-								color: white;
-								text-shadow: -1px -1px 0 black, 1px -1px 0 black, -1px 1px 0 black, 1px 1px 0 black;
-								letter-spacing: 1px; /* Adjust the letter spacing as needed */
-							}
-						</style>
-						<div class="inner">
-							<div class="logo"><span class="fa fa-flask"></span></div>
-							<h2>Anastasia's Portfolio</h2>
-							<p>I'm Anastasia Ignashkina, a biology graduate from FIU, with a passion for research and a background in healthcare from my time at Nicklaus Children's Hospital. Ready to contribute to the field of biology and make meaningful discoveries.<br></p>
-						</div>
-					</section>
+		<!-- Header -->
+		<header id="header" class="alt">
+			<h1><a href="index.html">aignashkina.io</a></h1>
+			<nav>
+				<a href="#menu">Menu</a>
+			</nav>
+		</header>
 
-				<!-- Wrapper -->
-					<section id="wrapper">
+		<!-- Menu -->
+		<nav id="menu">
+			<div class="inner">
+				<h2>Menu</h2>
+				<ul class="links">
+					<li><a href="index.html">Home</a></li>
+					<li><a href="hiv_research.html">HIV Research</a></li>
+					<li><a href = "aqua_research.html">Bleaching Research</a></li>
+					<li><a href = "academic_work.html">Academic Materials</a></li>
+					<li><a href="certs.html">Certifications</a></li>
+					<li><a href="references_from_ed.html">Recommendations</a></li>
+					<li><a href = "honors.html">My Awards & Honors</a></li>
+				</ul>
+				<a href="#" class="close">Close</a>
+			</div>
+		</nav>
 
-						<!-- One -->
-							<section id="one" class="wrapper spotlight style1">
-								<div class="inner">
-									<a href="hiv_research.html" class="image"><img src="images/red-liquid-laboratory-glass-logo-icon-illustration-design-vector.jpg" alt="" /></a>
-									<div class="content">
-										<h2 class="major">HIV Research</h2>
-										<p>This research is focused on treatment of HIV and it's complications.</p>
-										<a href="hiv_research.html" class="special">Learn more</a>
-									</div>
-								</div>
-							</section>
+		<!-- Banner -->
+		<section id="banner">
+			<style>
+				#banner {
+					background-image: url("images/lab1.jpeg");
+					background-size: cover;
+					background-position: center;
+					background-repeat: no-repeat;
+					color: white;
+					text-shadow: -1px -1px 0 black, 1px -1px 0 black, -1px 1px 0 black, 1px 1px 0 black;
+					letter-spacing: 1px;
+					/* Adjust the letter spacing as needed */
+				}
+			</style>
+			<div class="inner">
+				<div class="logo"><span class="fa fa-flask"></span></div>
+				<h2>Anastasia's Portfolio</h2>
+				<p>Intro: I’m Anastasia Ignashkina, a biochemistry alumni from Florida International University. With a
+					strong foundation in research and laboratory techniques, I bring a wealth of expertise and a passion
+					for scientific discoveries.<br></p>
+			</div>
+		</section>
 
-						<!-- Two -->
-							<section id="two" class="wrapper alt spotlight style2">
-								<div class="inner">
-									<a href="certs.html" class="image"><img src="images/cert2.jpg" alt="" /></a>
-									<div class="content">
-										<h2 class="major">Certifications</h2>
-										<p>My professional certifications.</p>
-										<a href="certs.html" class="special">Learn more</a>
-									</div>
-								</div>
-							</section>
+		<!-- Wrapper -->
+		<section id="wrapper">
 
-						<!-- Three -->
-							<section id="three" class="wrapper spotlight style3">
-								<div class="inner">
-									<a href="references_from_ed.html" class="image"><img src="images/recom3.png" alt="" /></a>
-									<div class="content">
-										<h2 class="major">Recommendations & Honors</h2>
-										<p>References from educational institutions.</p>
-										<a href="references_from_ed.html" class="special">Learn more</a>
-									</div>
-								</div>
-							</section>
+			<!-- One -->
+			<section id="one" class="wrapper spotlight style1">
+				<div class="inner">
+					<a href="hiv_research.html" class="image"><img
+							src="images/red-liquid-laboratory-glass-logo-icon-illustration-design-vector.jpg"
+							alt="" /></a>
+					<div class="content">
+						<h2 class="major">HIV Research</h2>
+						<p>This research is focused on treatment of HIV and it's complications.</p>
+						<a href="hiv_research.html" class="special">Learn more</a>
+					</div>
+				</div>
+			</section>
 
-						<!-- 
+			<!-- Six -->
+			<section id="one" class="wrapper spotlight style1">
+				<div class="inner">
+					<a href="aqua_research.html" class="image"><img
+							src="images/water1.jpeg"
+							alt="" /></a>
+					<div class="content">
+						<h2 class="major">RESEARCH - THE EFFECT OF GENE DELETION
+							IN CASSIOPEA SPP. ON BLEACHING</h2>
+						<p>This research is focused on effect of bleaching ocean life.</p>
+						<a href="aqua_research.html" class="special">Learn more</a>
+					</div>
+				</div>
+			</section>
+
+			<!-- Four -->
+			<section id="four" class="wrapper spotlight style3">
+				<div class="inner">
+					<a href="academic_work.html" class="image"><img src="images/note1.jpeg" alt="" /></a>
+					<div class="content">
+						<h2 class="major">Academic Work</h2>
+						<p>My academic materials and reseaches.</p>
+						<a href="academic_work.html" class="special">Learn more</a>
+					</div>
+				</div>
+			</section>
+
+			<!-- Two -->
+			<section id="two" class="wrapper alt spotlight style2">
+				<div class="inner">
+					<a href="certs.html" class="image"><img src="images/cert2.jpg" alt="" /></a>
+					<div class="content">
+						<h2 class="major">Certifications</h2>
+						<p>My professional certifications.</p>
+						<a href="certs.html" class="special">Learn more</a>
+					</div>
+				</div>
+			</section>
+
+			<!-- Three -->
+			<section id="three" class="wrapper spotlight style3">
+				<div class="inner">
+					<a href="references_from_ed.html" class="image"><img src="images/recom3.png" alt="" /></a>
+					<div class="content">
+						<h2 class="major">Recommendations</h2>
+						<p>References from educational institutions.</p>
+						<a href="references_from_ed.html" class="special">Learn more</a>
+					</div>
+				</div>
+			</section>
+
+			<!-- Five -->
+			<section id="five" class="wrapper spotlight style3">
+				<div class="inner">
+					<a href="honors.html" class="image"><img src="images/award1.jpg" alt="" /></a>
+					<div class="content">
+						<h2 class="major">My Awards & Honors</h2>
+						<p></p>
+						<a href="honors.html" class="special">Learn more</a>
+					</div>
+				</div>
+			</section>
+			<!-- 
 							<section id="four" class="wrapper alt style1">
 								<div class="inner">
 									<h2 class="major">Other researches</h2>
@@ -118,33 +168,37 @@
 
 					</section>
 				-->
-				<!-- Footer -->
-					<section id="footer">
-						<div class="inner">
-							<h2 class="major">Get in touch</h2>
-							<p>Below, you can get my professional accounts and download my resume.</p>
-							<!--Contact-->
-							<ul class="contact">
-								<li class="icon solid fa-user"><a href='letters/Anastasia_Ignashkina_CV.pdf' download = 'Anastasia_Ignashkina_CV.pdf'>Get My Resume</a></li>
-								<li class="icon solid fa-phone">(239)-321-3194</li>
-								<li class="icon solid fa-envelope"><a href="#">aigna002@fiu.edu</a></li>
-								<li class="icon brands fa-linkedin"><a href="https://www.linkedin.com/in/anastasia-ignashkina-5031951b7/">LinkedIn</a></li>
-							</ul>
-							<ul class="copyright">
-								<li>&copy; aignashkina.io </li><li>2023</li>
-							</ul>
-						</div>
-					</section>
+			<!-- Footer -->
+			<section id="footer">
+				<div class="inner">
+					<h2 class="major">Get in touch</h2>
+					<p>Below, you can get my professional accounts and download my resume.</p>
+					<!--Contact-->
+					<ul class="contact">
+						<li class="icon solid fa-user"><a href='letters/Anastasia_Ignashkina_CV.pdf'
+								download='Anastasia_Ignashkina_CV.pdf'>Get My Resume</a></li>
+						<li class="icon solid fa-phone">(239)-321-3194</li>
+						<li class="icon solid fa-envelope"><a href="#"> aignashkina7@gmail.com</a></li>
+						<li class="icon brands fa-linkedin"><a
+								href="https://www.linkedin.com/in/anastasia-ignashkina-5031951b7/">LinkedIn</a></li>
+					</ul>
+					<ul class="copyright">
+						<li>&copy; aignashkina.io </li>
+						<li>2023</li>
+					</ul>
+				</div>
+			</section>
 
-			</div>
+	</div>
 
-		<!-- Scripts -->
-			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/jquery.scrollex.min.js"></script>
-			<script src="assets/js/browser.min.js"></script>
-			<script src="assets/js/breakpoints.min.js"></script>
-			<script src="assets/js/util.js"></script>
-			<script src="assets/js/main.js"></script>
+	<!-- Scripts -->
+	<script src="assets/js/jquery.min.js"></script>
+	<script src="assets/js/jquery.scrollex.min.js"></script>
+	<script src="assets/js/browser.min.js"></script>
+	<script src="assets/js/breakpoints.min.js"></script>
+	<script src="assets/js/util.js"></script>
+	<script src="assets/js/main.js"></script>
 
-	</body>
+</body>
+
 </html>
