--- a/honors.html
+++ b/honors.html
@@ -1,7 +1,8 @@
 <!DOCTYPE HTML>
+<!---->
 <html>
 	<head>
-		<title>References</title>
+		<title>Honors</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -38,39 +39,29 @@
 				</nav>
 
 				<!-- Wrapper -->
-				<section id="wrapper">
-					<header>
-						<div class="inner">
-							<h2>Recommendations</h2>
-							<p>My esteemed letters of recommendation and prestigious honors, received from reputable educational institutions, acknowledging my exceptional achievements and contributions in both academic and professional realms. They serve as a testament to the high regard and recognition I have garnered for my dedication, expertise, and remarkable impact in the field.</p>
-						</div>
-					</header>
-
-					<!-- Content -->
-						<div class="wrapper">
+					<section id="wrapper">
+						<header>
 							<div class="inner">
+								<h2>Honors</h2>
+								<p>This page showcases my university honors and awards, highlighting my outstanding achievements during my academic journey.</p>
+							</div>
+						</header>
 
-								<h3 class="major">All Recommendations</h3>
-								<div class = 'pdf_files'>
-									<iframe src= "letters/Letter of recommendation, Dr. Peralta.pdf#toolbar=0"></iframe>
-									<iframe src= "letters/Letter of Recommendation. Dr. De Carli.pdf#toolbar=0"></iframe>
-									<iframe src= "letters/Letter, Mr.Freitas.pdf#toolbar=0"></iframe>
-									<iframe src= "letters/Letter, Mr.Fuchs.pdf#toolbar=0"></iframe>
-									<iframe src= "letters/Letter, Mr.Little.pdf#toolbar=0"></iframe>
-									<iframe src= "letters/Letter, Mrs Chaves-Nieves.pdf#toolbar=0"></iframe>
-									<iframe src= "letters/Letter, Mrs.Anderson.pdf#toolbar=0"></iframe>
-									<iframe src= "letters/Letter, Mrs.Blair.pdf#toolbar=0"></iframe>
-									<iframe src= "letters/Letter, Mrs.Knudsen.pdf#toolbar=0"></iframe>
-									<iframe src= "letters/Letter, Mrs.Macchia.pdf#toolbar=0"></iframe>
-									<iframe src= "letters/Letter, Mrs.Roeth.pdf#toolbar=0"></iframe>
-									<iframe src= "letters/Letter, Mrs.Shy.pdf#toolbar=0"></iframe>
-									<iframe src= "letters/Letter. Professor Corradino_.pdf#toolbar=0"></iframe>
-									<iframe src= "letters/Letter of Recommendation.pdf#toolbar=0"></iframe>
+						<!-- Content -->
+							<div class="wrapper">
+								<div class="inner">
+
+									<h3 class="major">All Awards</h3>
+									<div class = 'pdf_files'>
+										<iframe src = "honors/Honor Society 2022.pdf#toolbar=0"></iframe>
+										<iframe src = "honors/Honor Society 2020.pdf#toolbar=0"></iframe>
+										<iframe src = "honors/Academic Excellence 2019.pdf#toolbar=0"></iframe>
+										<iframe src = "honors/Honor Society 2018.pdf#toolbar=0"></iframe>
+									</div>
 								</div>
 							</div>
-						</div>
 
-				</section>
+					</section>
 
 			<!-- Footer -->
 			<section id="footer">
