--- a/certs.html
+++ b/certs.html
@@ -28,6 +28,7 @@
 						<ul class="links">
 							<li><a href="index.html">Home</a></li>
 							<li><a href="hiv_research.html">HIV Research</a></li>
+							<li><a href = "comp_chem.html">Computational Chemistry Research</a></li>
 							<li><a href = "aqua_research.html">Bleaching Research</a></li>
 							<li><a href = "academic_work.html">Academic Materials</a></li>
 							<li><a href="certs.html">Certifications</a></li>
@@ -43,7 +44,7 @@
 						<header>
 							<div class="inner">
 								<h2>Professional Accredited Certifications</h2>
-								<p>My professional certifications, obtained through rigorous training and examinations, showcasing my expertise and proficiency in various specialized areas of biological science .</p>
+								<p>My professional certifications, obtained through rigorous training and examinations, showcasing my expertise and proficiency in various specialized areas of biomedical sciences.</p>
 							</div>
 						</header>
 
@@ -81,7 +82,7 @@
 								href="https://www.linkedin.com/in/anastasia-ignashkina-5031951b7/">LinkedIn</a></li>
 					</ul>
 					<ul class="copyright">
-						<li>&copy; aignashkina.io </li>
+						<li>Copyright © Anastasia Ignashkina</li>
 						<li>2023</li>
 					</ul>
 				</div>
