--- a/hiv_research.html
+++ b/hiv_research.html
@@ -31,6 +31,7 @@
 						<ul class="links">
 							<li><a href="index.html">Home</a></li>
 							<li><a href="hiv_research.html">HIV Research</a></li>
+							<li><a href = "comp_chem.html">Computational Chemistry Research</a></li>
 							<li><a href = "aqua_research.html">Bleaching Research</a></li>
 							<li><a href = "academic_work.html">Academic Materials</a></li>
 							<li><a href="certs.html">Certifications</a></li>
@@ -46,16 +47,14 @@
 			<header>
 				<div class="inner">
 					<h2>HIV Research</h2>
-					<p>Disclaimer: The specific details of the research conducted for this presentation will not be
-						disclosed in the slides. This decision has been made to maintain confidentiality and protect the
-						integrity of the research. Thank you for your understanding.</p>
+					<p></p>
 				</div>
 			</header>
 
 			<!-- Content -->
 			<div class="wrapper">
 				<div class="inner">
-
+					<p>Patent Note: The contents of this research are confidential and may not be disclosed, copied, or distributed without prior written permission from the author(s) or the organization. Unauthorized use or disclosure of this research is strictly prohibited and may result in legal consequences. By accessing or reviewing this research, you agree to maintain the strictest confidentiality and protect the integrity of the information contained herein.</p>
 					<h3 class="major">Part 1</h3>
 					<p>HIV treatment for pregnant women <br>
 						Problem 1: How to treat pregnant women with HIV infection without hurting a baby<br>
@@ -128,7 +127,7 @@
 								href="https://www.linkedin.com/in/anastasia-ignashkina-5031951b7/">LinkedIn</a></li>
 					</ul>
 					<ul class="copyright">
-						<li>&copy; aignashkina.io </li>
+						<li>Copyright © Anastasia Ignashkina</li>
 						<li>2023</li>
 					</ul>
 				</div>
