--- a/aqua_research.html
+++ b/aqua_research.html
@@ -28,6 +28,7 @@
 						<ul class="links">
 							<li><a href="index.html">Home</a></li>
 							<li><a href="hiv_research.html">HIV Research</a></li>
+							<li><a href = "comp_chem.html">Computational Chemistry Research</a></li>
 							<li><a href = "aqua_research.html">Bleaching Research</a></li>
 							<li><a href = "academic_work.html">Academic Materials</a></li>
 							<li><a href="certs.html">Certifications</a></li>
@@ -52,6 +53,7 @@
 								<div class="inner">
 
 									<h3 class="major">Research</h3>
+									<p>Patent Note: This research presentation contains confidential and proprietary information. It is intended solely for the participants of the presentation and should not be shared or distributed without explicit permission. Any unauthorized disclosure, copying, or dissemination of the contents of this presentation is strictly prohibited. Please ensure the confidentiality of the information presented and respect the intellectual property rights associated with this research. Thank you for your understanding and adherence to confidentiality.</p>
 									<p>Please scroll down to the sildes to see other pages.</p>
 									<div class = 'pdf_files'>
 										<iframe src = "academic work/Experiment design.pdf#toolbar=0"></iframe>
@@ -76,7 +78,7 @@
 								href="https://www.linkedin.com/in/anastasia-ignashkina-5031951b7/">LinkedIn</a></li>
 					</ul>
 					<ul class="copyright">
-						<li>&copy; aignashkina.io </li>
+						<li>Copyright © Anastasia Ignashkina</li>
 						<li>2023</li>
 					</ul>
 				</div>
