--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
 				<ul class="links">
 					<li><a href="index.html">Home</a></li>
 					<li><a href="hiv_research.html">HIV Research</a></li>
+					<li><a href = "comp_chem.html">Computational Chemistry Research</a></li>
 					<li><a href = "aqua_research.html">Bleaching Research</a></li>
 					<li><a href = "academic_work.html">Academic Materials</a></li>
 					<li><a href="certs.html">Certifications</a></li>
@@ -59,7 +60,7 @@
 			<div class="inner">
 				<div class="logo"><span class="fa fa-flask"></span></div>
 				<h2>Anastasia's Portfolio</h2>
-				<p>Intro: I’m Anastasia Ignashkina, a biochemistry alumni from Florida International University. With a
+				<p>I’m Anastasia Ignashkina, a biochemistry alumni from Florida International University. With a
 					strong foundation in research and laboratory techniques, I bring a wealth of expertise and a passion
 					for scientific discoveries.<br></p>
 			</div>
@@ -82,12 +83,25 @@
 				</div>
 			</section>
 
+
+			<!-- Seven -->
+			<section id="one" class="wrapper spotlight style1">
+				<div class="inner">
+					<a href="comp_chem.html" class="image"><img
+							src="images/chemlogo.jpeg"
+							alt="" /></a>
+					<div class="content">
+						<h2 class="major">Computational Chemistry Research</h2>
+						<p>This research is focused on unraveling the reaction mechanism and energy profiles of an organic reaction through molecular optimizations and high-performance computer calculations.</p>
+						<a href="comp_chem.html" class="special">Learn more</a>
+					</div>
+				</div>
+			</section>
+
 			<!-- Six -->
 			<section id="one" class="wrapper spotlight style1">
 				<div class="inner">
-					<a href="aqua_research.html" class="image"><img
-							src="images/water1.jpeg"
-							alt="" /></a>
+					<a href="aqua_research.html" class="image"><img src="images/water1.jpeg" alt="" /></a>
 					<div class="content">
 						<h2 class="major">RESEARCH - THE EFFECT OF GENE DELETION
 							IN CASSIOPEA SPP. ON BLEACHING</h2>
@@ -183,7 +197,7 @@
 								href="https://www.linkedin.com/in/anastasia-ignashkina-5031951b7/">LinkedIn</a></li>
 					</ul>
 					<ul class="copyright">
-						<li>&copy; aignashkina.io </li>
+						<li>Copyright © Anastasia Ignashkina</li>
 						<li>2023</li>
 					</ul>
 				</div>
