--- a/references_from_ed.html
+++ b/references_from_ed.html
@@ -27,6 +27,7 @@
 						<ul class="links">
 							<li><a href="index.html">Home</a></li>
 							<li><a href="hiv_research.html">HIV Research</a></li>
+							<li><a href = "comp_chem.html">Computational Chemistry Research</a></li>
 							<li><a href = "aqua_research.html">Bleaching Research</a></li>
 							<li><a href = "academic_work.html">Academic Materials</a></li>
 							<li><a href="certs.html">Certifications</a></li>
@@ -52,20 +53,20 @@
 
 								<h3 class="major">All Recommendations</h3>
 								<div class = 'pdf_files'>
-									<iframe src= "letters/Letter of recommendation, Dr. Peralta.pdf#toolbar=0"></iframe>
+									<iframe src= "letters/Letter of Recommendation.pdf#toolbar=0"></iframe>
 									<iframe src= "letters/Letter of Recommendation. Dr. De Carli.pdf#toolbar=0"></iframe>
+									<iframe src= "letters/Letter. Professor Corradino_.pdf#toolbar=0"></iframe>
+									<iframe src= "letters/Letter of recommendation, Dr. Peralta.pdf#toolbar=0"></iframe>
+									<iframe src= "letters/Letter, Mrs.Blair.pdf#toolbar=0"></iframe>
+									<iframe src= "letters/Letter, Mrs.Roeth.pdf#toolbar=0"></iframe>
+									<iframe src= "letters/Letter, Mrs Chaves-Nieves.pdf#toolbar=0"></iframe>
+									<iframe src= "letters/Letter, Mrs.Macchia.pdf#toolbar=0"></iframe>
 									<iframe src= "letters/Letter, Mr.Freitas.pdf#toolbar=0"></iframe>
 									<iframe src= "letters/Letter, Mr.Fuchs.pdf#toolbar=0"></iframe>
-									<iframe src= "letters/Letter, Mr.Little.pdf#toolbar=0"></iframe>
-									<iframe src= "letters/Letter, Mrs Chaves-Nieves.pdf#toolbar=0"></iframe>
-									<iframe src= "letters/Letter, Mrs.Anderson.pdf#toolbar=0"></iframe>
-									<iframe src= "letters/Letter, Mrs.Blair.pdf#toolbar=0"></iframe>
 									<iframe src= "letters/Letter, Mrs.Knudsen.pdf#toolbar=0"></iframe>
-									<iframe src= "letters/Letter, Mrs.Macchia.pdf#toolbar=0"></iframe>
-									<iframe src= "letters/Letter, Mrs.Roeth.pdf#toolbar=0"></iframe>
 									<iframe src= "letters/Letter, Mrs.Shy.pdf#toolbar=0"></iframe>
-									<iframe src= "letters/Letter. Professor Corradino_.pdf#toolbar=0"></iframe>
-									<iframe src= "letters/Letter of Recommendation.pdf#toolbar=0"></iframe>
+									<iframe src= "letters/Letter, Mr.Little.pdf#toolbar=0"></iframe>
+									<iframe src= "letters/Letter, Mrs.Anderson.pdf#toolbar=0"></iframe>
 								</div>
 							</div>
 						</div>
@@ -87,7 +88,7 @@
 								href="https://www.linkedin.com/in/anastasia-ignashkina-5031951b7/">LinkedIn</a></li>
 					</ul>
 					<ul class="copyright">
-						<li>&copy; aignashkina.io </li>
+						<li>Copyright © Anastasia Ignashkina</li>
 						<li>2023</li>
 					</ul>
 				</div>
