--- a/honors.html
+++ b/honors.html
@@ -28,6 +28,7 @@
 						<ul class="links">
 							<li><a href="index.html">Home</a></li>
 							<li><a href="hiv_research.html">HIV Research</a></li>
+							<li><a href = "comp_chem.html">Computational Chemistry Research</a></li>
 							<li><a href = "aqua_research.html">Bleaching Research</a></li>
 							<li><a href = "academic_work.html">Academic Materials</a></li>
 							<li><a href="certs.html">Certifications</a></li>
@@ -78,7 +79,7 @@
 								href="https://www.linkedin.com/in/anastasia-ignashkina-5031951b7/">LinkedIn</a></li>
 					</ul>
 					<ul class="copyright">
-						<li>&copy; aignashkina.io </li>
+						<li>Copyright © Anastasia Ignashkina</li>
 						<li>2023</li>
 					</ul>
 				</div>
