--- a/certs.html
+++ b/certs.html
@@ -2,7 +2,7 @@
 <!---->
 <html>
 	<head>
-		<title>Certifications</title>
+		<title>Credentials</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -43,8 +43,8 @@
 					<section id="wrapper">
 						<header>
 							<div class="inner">
-								<h2>Professional Accredited Certifications</h2>
-								<p>My professional certifications, obtained through rigorous training and examinations, showcasing my expertise and proficiency in various specialized areas of biomedical sciences.</p>
+								<h2>Professional Accredited Credentials</h2>
+								<p>My professional credentials and certifications, obtained through rigorous training and examinations, showcasing my expertise and proficiency in various specialized areas of biomedical sciences.</p>
 							</div>
 						</header>
 
