--- a/hiv_research.html
+++ b/hiv_research.html
@@ -47,7 +47,7 @@
 			<header>
 				<div class="inner">
 					<h2>HIV Research</h2>
-					<p></p>
+					<p>This research focuses on addressing two crucial challenges in HIV treatment for pregnant women: safeguarding the well-being of the baby while effectively treating the mother's infection and targeting the virus during its latent stage. Through the development of a unique multi-step therapy using safe drugs and the creation of a novel medication for direct viral destruction, my research aims to overcome the limitations of current antiretrovirals that pose risks to the fetus or exhibit inadequate efficacy. By employing computational chemistry techniques, I investigate the origins of side effects, develop a new drug, and explore strategies such as the destruction of reservoir cells and potential future pregnancy options.</p>
 				</div>
 			</header>
 
