--- a/index.html
+++ b/index.html
@@ -128,8 +128,8 @@
 				<div class="inner">
 					<a href="certs.html" class="image"><img src="images/cert2.jpg" alt="" /></a>
 					<div class="content">
-						<h2 class="major">Certifications</h2>
-						<p>My professional certifications.</p>
+						<h2 class="major">Credentials</h2>
+						<p>My professional credentials and certifications.</p>
 						<a href="certs.html" class="special">Learn more</a>
 					</div>
 				</div>
