--- a/certs.html
+++ b/certs.html
@@ -44,7 +44,7 @@
 						<header>
 							<div class="inner">
 								<h2>Professional Accredited Credentials</h2>
-								<p>My professional credentials and certifications, obtained through rigorous training and examinations, showcasing my expertise and proficiency in various specialized areas of biomedical sciences.</p>
+								<p>My professional credentials, obtained through rigorous training and examinations, showcasing my expertise and proficiency in various specialized areas of biomedical sciences.</p>
 							</div>
 						</header>
 
