--- a/index.html
+++ b/index.html
@@ -60,9 +60,7 @@
 			<div class="inner">
 				<div class="logo"><span class="fa fa-flask"></span></div>
 				<h2>Anastasia's Portfolio</h2>
-				<p>I’m Anastasia Ignashkina, a biochemistry alumni from Florida International University. With a
-					strong foundation in research and laboratory techniques, I bring a wealth of expertise and a passion
-					for scientific discoveries.<br></p>
+				<p>I’M ANASTASIA IGNASHKINA, A BIOCHEMISTRY AND NATURAL & APPLIES SCIENCES ALUMNI FROM FLORIDA INTERNATIONAL UNIVERSITY. WITH A STRONG FOUNDATION IN RESEARCH AND LABORATORY TECHNIQUES, I BRING A WEALTH OF EXPERTISE AND A PASSION FOR SCIENTIFIC DISCOVERIES.</p>
 			</div>
 		</section>
 
