--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
 					<a href="academic_work.html" class="image"><img src="images/note1.jpeg" alt="" /></a>
 					<div class="content">
 						<h2 class="major">Academic Work</h2>
-						<p>My academic materials and reseaches.</p>
+						<p>My academic materials and researches.</p>
 						<a href="academic_work.html" class="special">Learn more</a>
 					</div>
 				</div>
