--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 			<div class="inner">
 				<div class="logo"><span class="fa fa-flask"></span></div>
 				<h2>Anastasia's Portfolio</h2>
-				<p>I’M ANASTASIA IGNASHKINA, A BIOCHEMISTRY AND NATURAL & APPLIES SCIENCES ALUMNI FROM FLORIDA INTERNATIONAL UNIVERSITY. WITH A STRONG FOUNDATION IN RESEARCH AND LABORATORY TECHNIQUES, I BRING A WEALTH OF EXPERTISE AND A PASSION FOR SCIENTIFIC DISCOVERIES.</p>
+				<p>I’M ANASTASIA IGNASHKINA, A BIOCHEMISTRY AND NATURAL & APPLIED SCIENCES ALUMNI FROM FLORIDA INTERNATIONAL UNIVERSITY. WITH A STRONG FOUNDATION IN RESEARCH AND LABORATORY TECHNIQUES, I BRING A WEALTH OF EXPERTISE AND A PASSION FOR SCIENTIFIC DISCOVERIES.</p>
 			</div>
 		</section>
 
@@ -127,7 +127,7 @@
 					<a href="certs.html" class="image"><img src="images/cert2.jpg" alt="" /></a>
 					<div class="content">
 						<h2 class="major">Credentials</h2>
-						<p>My professional credentials and certifications.</p>
+						<p>My professional credentials.</p>
 						<a href="certs.html" class="special">Learn more</a>
 					</div>
 				</div>
