--- a/certs.html
+++ b/certs.html
@@ -60,6 +60,7 @@
 										<iframe src = "pdfs/Drug Development Diploma.pdf#toolbar=0"></iframe>
 										<iframe src = "pdfs/Hazard Communication certificate.pdf#toolbar=0"></iframe>
 										<iframe src = "pdfs/Immunology Technician certificate.pdf#toolbar=0"></iframe>
+										<iframe src = "pdfs/First Aid for Mental Health certificate.pdf#toolbar=0"></iframe>
 										<iframe src = "pdfs/Laboratory Hazard Awareness certificate.pdf#toolbar=0"></iframe>
 									</div>
 								</div>
@@ -74,7 +75,7 @@
 					<p>Below, you can get my professional accounts and download my resume.</p>
 					<!--Contact-->
 					<ul class="contact">
-						<li class="icon solid fa-user"><a href='letters/Anastasia_Ignashkina_CV.pdf'
+						<li class="icon solid fa-user"><a href='letters/Anastasia Ignashkina CV.pdf'
 								download='Anastasia_Ignashkina_CV.pdf'>Get My Resume</a></li>
 						<li class="icon solid fa-phone">(239)-321-3194</li>
 						<li class="icon solid fa-envelope"><a href="#"> aignashkina7@gmail.com</a></li>
