--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
 					<p>Below, you can get my professional accounts and download my resume.</p>
 					<!--Contact-->
 					<ul class="contact">
-						<li class="icon solid fa-user"><a href='letters/Anastasia Ignashkina CV.pdf'
+						<li class="icon solid fa-user"><a href='letters/Anastasia_Ignashkina_CV.pdf'
 								download='Anastasia_Ignashkina_CV.pdf'>Get My Resume</a></li>
 						<li class="icon solid fa-phone">(239)-321-3194</li>
 						<li class="icon solid fa-envelope"><a href="#"> aignashkina7@gmail.com</a></li>
