--- a/references_from_ed.html
+++ b/references_from_ed.html
@@ -55,6 +55,7 @@
 								<div class = 'pdf_files'>
 									<iframe src= "letters/Letter of Recommendation_Aweke Dubi.pdf#toolbar=0"></iframe>
 									<iframe src= "letters/Letter of Recommendation.pdf#toolbar=0"></iframe>
+									<iframe src= "letters/Letter of Recommendation. Herzen University.pdf#toolbar=0"></iframe>
 									<iframe src= "letters/Letter of Recommendation. Dr. De Carli.pdf#toolbar=0"></iframe>
 									<iframe src= "letters/Letter. Professor Corradino_.pdf#toolbar=0"></iframe>
 									<iframe src= "letters/Letter of recommendation, Dr. Peralta.pdf#toolbar=0"></iframe>
