--- a/index.html
+++ b/index.html
@@ -60,26 +60,13 @@
 			<div class="inner">
 				<div class="logo"><span class="fa fa-flask"></span></div>
 				<h2>Anastasia's Portfolio</h2>
-				<p>I’M ANASTASIA IGNASHKINA, A BIOCHEMISTRY AND NATURAL & APPLIED SCIENCES ALUMNI FROM FLORIDA INTERNATIONAL UNIVERSITY. WITH A STRONG FOUNDATION IN RESEARCH AND LABORATORY TECHNIQUES, I BRING A WEALTH OF EXPERTISE AND A PASSION FOR SCIENTIFIC DISCOVERIES.</p>
+				<p>I’M ANASTASIA IGNASHKINA, A CHEMOPROTEOMICS RESEARCH ASSOCIATE AT HYKU BIOSCIENCES. WITH A STRONG FOUNDATION IN RESEARCH AND LABORATORY TECHNIQUES, I BRING A WEALTH OF EXPERTISE AND A PASSION FOR SCIENTIFIC DISCOVERIES.</p>
 			</div>
 		</section>
 
 		<!-- Wrapper -->
 		<section id="wrapper">
 
-			<!-- One -->
-			<section id="one" class="wrapper spotlight style1">
-				<div class="inner">
-					<a href="hiv_research.html" class="image"><img
-							src="images/red-liquid-laboratory-glass-logo-icon-illustration-design-vector.jpg"
-							alt="" /></a>
-					<div class="content">
-						<h2 class="major">HIV Research</h2>
-						<p>This research is focused on treatment of HIV and it's complications.</p>
-						<a href="hiv_research.html" class="special">Learn more</a>
-					</div>
-				</div>
-			</section>
 
 
 			<!-- Seven -->
