--- a/references_from_ed.html
+++ b/references_from_ed.html
@@ -43,7 +43,7 @@
 					<header>
 						<div class="inner">
 							<h2>Recommendations</h2>
-							<p>My esteemed letters of recommendation and prestigious honors, received from reputable educational institutions, acknowledging my exceptional achievements and contributions in both academic and professional realms. They serve as a testament to the high regard and recognition I have garnered for my dedication, expertise, and remarkable impact in the field.</p>
+							<p>My esteemed letters of recommendation and prestigious honors, received from reputable educational institutions, acknowledge my exceptional achievements and contributions in both academic and professional realms. They serve as a testament to the high regard and recognition I have garnered for my dedication, expertise, and remarkable impact in the field.</p>
 						</div>
 					</header>
 
@@ -58,16 +58,6 @@
 									<iframe src= "letters/Letter of Recommendation. Dr. De Carli.pdf#toolbar=0"></iframe>
 									<iframe src= "letters/Letter. Professor Corradino_.pdf#toolbar=0"></iframe>
 									<iframe src= "letters/Letter of recommendation, Dr. Peralta.pdf#toolbar=0"></iframe>
-									<iframe src= "letters/Letter, Mrs.Blair.pdf#toolbar=0"></iframe>
-									<iframe src= "letters/Letter, Mrs.Roeth.pdf#toolbar=0"></iframe>
-									<iframe src= "letters/Letter, Mrs Chaves-Nieves.pdf#toolbar=0"></iframe>
-									<iframe src= "letters/Letter, Mrs.Macchia.pdf#toolbar=0"></iframe>
-									<iframe src= "letters/Letter, Mr.Freitas.pdf#toolbar=0"></iframe>
-									<iframe src= "letters/Letter, Mr.Fuchs.pdf#toolbar=0"></iframe>
-									<iframe src= "letters/Letter, Mrs.Knudsen.pdf#toolbar=0"></iframe>
-									<iframe src= "letters/Letter, Mrs.Shy.pdf#toolbar=0"></iframe>
-									<iframe src= "letters/Letter, Mr.Little.pdf#toolbar=0"></iframe>
-									<iframe src= "letters/Letter, Mrs.Anderson.pdf#toolbar=0"></iframe>
 								</div>
 							</div>
 						</div>
